<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Unlock Device Tool</string>
    <string name="unsupported_hw">"The device model is not
 \u0009\u0009 supported"</string>
    <string name="unlocked_dmserver">The device is unlocked</string>
    <string name="network_fail">Network connection is not available.</string>
    <string name="unspecific_error">"An unknown error occurs, which may be a network connection issue.
 please wait and try again later"</string>
    <string name="login_fail">Your password is not valid</string>
    <string name="verify_type">Verify your device via:</string>
    <string name="agree">Agree</string>
    <string name="unlock_fail_word">Failed to unlock your device, please try again later.</string>
    <string name="wait">Please wait...</string>
    <string name="warning_word">You do not have PIN password to verify your device, do you still want to unlock your device?</string>
    <string name="check_unlock">Press to unlock your device</string>
    <string name="google_account">Google account</string>
    <string name="pin_password">PIN Password</string>
    <string name="google_pass_user">xxx@gmail.com</string>
    <string name="google_pass_word">Please verify your Google account to unlock your device:</string>
    <string name="google_pass_word_hint">Password</string>
    <string name="pin_pass_word">Please enter your PIN password to unlock your device:</string>
    <string name="pin_pass_word_hint">PIN Password</string>
    <string name="google_verify">Google account verification</string>
    <string name="pin_verify">PIN password verification</string>
    <string name="alert_title">Notice:</string>
    <string name="unlock_device_owner">This version of Unlock Device Tool can be used only by the owner of the device.</string>
    <string name="alert_content">"\u0009\u0009 Before you download, install, and use the Unlock Device App (\"App\") you acknowledge and assume complete risk to the quality and performance of this App, including but not limited to the following: once you activate the App you will not be able to recover your ASUS product (“Original Product”) back to original locked conditions; the Original Product with the activated App (\"Revised Product\") will not be deemed the Original Product; the Revised Product will no longer be covered under the warranty of the Original Product; the software of Revised Product will no longer be deemed the software of the Original Product and can no longer receive ASUS software updates; your purchased digital content may also be affected.

 \u0009\u0009 You also acknowledge ASUS does not guarantee service satisfaction to any Revised Product, including events involving paid service requested by you to be performed to the Revised Product. Furthermore, such repaired Revised Product will not be covered under the warranty of the Original Product; the software of the repaired Revised Product will not be deemed the software of the Original Product and will not receive ASUS software updates.

 It is strongly advised that you avoid activating this App unless you fully understand and accept the risks that may arise."</string>
    <string name="eula_title">End User License Agreement</string>
    <string name="agree_btn">I have read and agree to all the terms and conditions of the License Agreeement.</string>
    <string name="eula_msg">"&lt;b>Before you download, install, and use the Unlock Device App (\"App\") you acknowledge and assume complete risk to the quality and performance of this App, including but not limited to the following: once you activate the App you will not be able to recover your ASUS product (“Original Product”) back to original locked conditions; the Original Product with the activated App (\"Revised Product\") will not be deemed the Original Product; the Revised Product will no longer be covered under the warranty of the Original Product; the software of Revised Product will no longer be deemed the software of the Original Product and can no longer receive ASUS software updates; your purchased digital content may also be affected. You also acknowledge ASUS does not guarantee service satisfaction to any Revised Product, including events involving paid service requested by you to be performed to the Revised Product. Furthermore, such repaired Revised Product will not be covered under the warranty of the Original Product; the software of the repaired Revised Product will not be deemed the software of the Original Product and will not receive ASUS software updates. It is strongly advised that you avoid activating this App unless you fully understand and accept the risks that may arise. &lt;br/>&lt;br/> This End User License Agreement (\"EULA\") constitutes a valid and binding agreement between ASUSTeK Computer Inc. (\"ASUS\") and You, as a user, for the use of the ASUS Software (\"Software\") defined as set forth below. By installing and continuing to use the software YOU EXPRESSLY ACKNOWLEGE THAT YOU HAVE READ AND UNDERSTAND AND AGREE TO BE BOUND BY THE TERMS OF THIS EULA AND ANY NEW VERSIONS HEREOF.&lt;/b> &lt;br/>&lt;br/> &lt;b>1. LICENSE&lt;/b> Subject to the terms of this EULA, ASUS hereby grants You a limited, personal, non-commercial, non-exclusive license to use the Software solely as embedded in the ASUS products. You may make one copy of the Software in machine-readable form for backup purposes only; provided that the backup copy must include all copyright or other proprietary notices contained on the original. This license shall not be sublicensed, and is not transferable except to a person or entity to whom you transfer ownership of the complete ASUS products containing the Software, provided you permanently transfer all rights under this EULA and do not retain any full or partial copies of the Software, and the recipient agrees to the terms of this EULA. &lt;br/>&lt;br/> &lt;b>2. REVERSE RESTRICTION&lt;/b> You shall not reverse engineer, decompile decrypt or disassemble or permit or induce the foregoing except to the extent directly applicable law prohibits enforcement of the foregoing. &lt;br/>&lt;br/> &lt;b>3. CONFIDENTIALITY&lt;/b> You shall have a duty to protect and not to disclose or cause to be disclosed in whole or in part of confidential information of the Software including but not limited to trade secrets, copyrighted material in any form to any third party. &lt;br/>&lt;br/> &lt;b>4. Intellectual Property RIGHTS (\"IP Rights\")&lt;/b> You acknowledge and agree that all IP Rights, title, and interest to or arising from the Software are and shall remain the exclusive property of ASUS or its licensor. Nothing in this EULA intends to transfer any such IP Rights to You. Any unauthorized use of the IP Rights is a violation of this EULA as well as a violation of intellectual property laws, including but not limited to copyright laws and trademark laws. By sending any information, material, ideas, concepts or techniques except for personal information to ASUS through the Software (\"Feedbacks\"), You acknowledge and agree that: (i) Your Feedbacks shall not contain confidential or proprietary information; (ii) ASUS is under no obligation of any kind of confidentiality, express or implied, regarding the Feedbacks; (iii)ASUS shall be entitled to use or disclose, at ASUS’s sole discretion, the Feedbacks for any purpose, in any way, worldwide; (iv) Your Feedbacks shall become the property of ASUS without any obligation of ASUS to You; and (v) You are not entitled to any compensation or reimbursement of any kind from. &lt;br/>&lt;br/> &lt;b>5. Warranty Disclaimer and Limitation of Liability&lt;/b> YOU ACKNOWLEDGE THAT THE SOFTWARE IS PROVIDED \"AS IS.\" THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THIS SOFTWARE IS WITH YOU, INCLUDING BUT NOT LIMITED TO RELATED COST OF ALL NECESSARY SERVICING AND REPAIR. TO THE EXTENT PERMITTED BY LAW, ASUS MAKES NO WARRANTIES, EXPRESS OR IMPLIED, WITH RESPECT TO THIS SOFTWARE OR ANY OTHER INFORMATION OR DOCUMENTATION PROVIDED UNDER THIS EULA OR FOR THIS SOFTWARE, INCLUDING BUT NOT LIMITED TO ANY WARRANTY OF MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE OR AGAINST INFRINGEMENT, OR ANY WARRANTY ARISING OUT OF USAGE OR OUT OF COURSE OF PERFORMANCE. ASUS ALSO MAKES NO WARRANTY AS TO THE RESULTS THAT MAY BE OBTAINED FROM THE USE OF THIS SOFTWARE OR AS TO THE ACCURACY OR RELIABILITY OF ANY INFORMATION OBTAINED THROUGH THIS SOFTWARE. SOME JURISDICTIONS DO NOT ALLOW THE EXCLUSION OF CERTAIN WARRANTIES OR THE LIMITATION OR EXCLUSION OF LIABILITY FOR CERTAIN DAMAGES. ACCORDINGLY, SOME OF THE ABOVE DISCLAIMERS AND LIMITATIONS OF LIABILITY MAY NOT APPLY TO YOU. &lt;br/>&lt;br/> THE ENTIRE RISK ARISING OUT OF THE USE AND/OR PERFORMANCE OF THIS SOFTWARE REMAINS WITH YOU. IN NO EVENT SHALL ASUS, ITS LICENSORS OR ANY OF THEIR RESPECTIVE OFFICERS, DIRECTORS, EMPLOYEES, AGENTS OR AFFILIATES BE LIABLE FOR ANY CONSEQUENTIAL, INCIDENTAL, DIRECT, INDIRECT, SPECIAL, PUNITIVE, OR OTHER DAMAGES WHATSOEVER (INCLUDING, WITHOUT LIMITATION, DAMAGES FOR LOSS OF PROFITS, INTERRUPTION, LOSS OF INFORMATION, OR OTHER PECUNIARY LOSS) ARISING OUT OF OR RELATING TO THIS EULA OR THE USE OF OR INABILITY TO USE THE SOFTWARE OR ANY PART THEREOF, EVEN IF ASUS HAVE BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. SOME JURISDICTIONS DO NOT ALLOW THE EXCLUSION OF CERTAIN WARRANTIES OR THE LIMITATION OR EXCLUSION OF LIABILITY FOR CERTAIN DAMAGES. ACCORDINGLY, SOME OF THE ABOVE DISCLAIMERS AND LIMITATIONS OF LIABILITY MAY NOT APPLY TO YOU. &lt;br/>&lt;br/> &lt;b>6. Indemnity&lt;/b> YOU agree to defend, indemnify and hold harmless ASUS and its affiliates, service providers, syndicators, distributors, licensors, officers, directors and employees, from and against any and all losses, damages, liabilities, and expenses arising out of any claim or demand (including reasonable attorneys' fees and court costs), due to or in connection with YOUR violation of this EULA or any applicable law or regulation, or third-party right."</string>
</resources>
